@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-22T16:25:33Z",
-  "count_outdated" : 406,
-  "uniques_outdated" : 233,
-  "count" : 431,
+  "timestamp" : "2022-07-23T01:23:03Z",
+  "count_outdated" : 408,
+  "uniques_outdated" : 234,
+  "count" : 433,
   "uniques" : 250,
   "clones" : [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 2,
@@ -91,8 +84,8 @@
     },
     {
       "timestamp": "2022-07-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
